added player and enimies attributes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <!--Filling the Canvas-->
-    <canvas id = "myCanvas" style ="border:1px solid #b6b6eb"></canvas>
+    <canvas id = "myCanvas" width="400" height="400" style ="border:1px solid #b6b6eb"></canvas>
          <!--JavaScript-->
     <script src="game2D.js">
         var can; 
