--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
     </head>
     <body>
         <!--Filling the Canvas-->
-    <canvas id = "myCanvas" width="400" height="400" style ="border:1px solid #b6b6eb"></canvas>
+    <canvas id = "myCanvas" width="600" height="600" style ="border:1px solid #b6b6eb"></canvas>
          <!--JavaScript-->
-    <script src="game2D.js">
-    
-    </script>
+    <script src="game2D.js"></script>
         
     </body>
 
